<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="or_login_with">Or login with :</string>
    <string name="reimposta">Reimposta</string>
</resources>
